# earthengine-catalog

./: pyproject.toml
stac/: stac_gcs_loader.py  stac_lib.py
