[tool.poetry]
name = "earthengine_catalog"
version = "0.1.0"
description = "A library for accessing Earth Engine catalog data."
authors = ["Google Earth Engine Team <earthengine@google.com>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/google/earthengine-catalog"

[tool.poetry.dependencies]
python = "^3.9"
google-cloud-aiplatform = "^1.18.0"
iso8601 = "^2.1.0"
typing_extensions = "^4.0.0"  # Add a version specification

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"  # Add pytest as a dev dependency

[tool.poetry.extras]
test = ["pytest"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"