[tool.poetry]
name = "stac"
version = "0.1.0"
description = "A library for accessing Earth Engine catalog data."
authors = ["Google Earth Engine Team <earthengine@google.com>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/google/earthengine-catalog"

[tool.poetry.dependencies]
python = "^3.9"
google-cloud-aiplatform = "^1.18.0"
iso8601 = "^2.1.0"
typing_extensions = "^4.0.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.0.0"  # Adjust the version as needed

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"